<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    app:circularflow_radiusInDP="50dp"
    android:backgroundTint="@android:color/transparent"
    android:elevation="8dp" >

    <LinearLayout
        android:id="@+id/card_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/arrow_right" />

        <TextView
            android:id="@+id/device_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:text="@string/name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/device_mac_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/mac"/>
        </LinearLayout>
    </LinearLayout>




</com.google.android.material.card.MaterialCardView>